--- a/index.html
+++ b/index.html
@@ -3,72 +3,51 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Base Convertor</title>
-
-    <!-- Bootstrap css file -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css"
-      integrity="sha512-jnSuA4Ss2PkkikSOLtYs8BlYIeeIK1h99ty4YfvRPAlzr377vr3CXDb7sb7eEEBYjDtcYj+AjBH3FLv5uSJuXg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    <title>Base Converter</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body class="bg-dark d-flex justify-content-center align-items-center vh-100">
-    <div class="container bg-body p-3 rounded-2" style="width: 400px">
-      <h1 class="text-center pb-3">Base Convertor</h1>
+  <body>
+    <div class="container">
+      <h1>Base Converter</h1>
+      <p>Convert numbers between Binary, Octal, Decimal, and Hexadecimal</p>
 
-      <form action="#">
-        <label for="number" class="form-label">Enter number</label>
-        <input
-          type="text"
-          id="number"
-          name="number"
-          class="form-control"
-          required
-        />
+      <div class="converter-box">
+        <div class="input-group">
+          <label for="inputNumber">Enter Number:</label>
+          <input type="text" id="inputNumber" placeholder="Enter number..." />
+        </div>
 
-        <br />
+        <div class="select-group">
+          <div class="select-box">
+            <label for="fromBase">From Base:</label>
+            <select id="fromBase">
+              <option value="2">Binary (Base 2)</option>
+              <option value="8">Octal (Base 8)</option>
+              <option value="10" selected>Decimal (Base 10)</option>
+              <option value="16">Hexadecimal (Base 16)</option>
+            </select>
+          </div>
 
-        <label for="from-base" class="form-label">From Base</label>
-        <select name="from-base" id="from-base" class="form-select">
-          <option value="select">Select Base</option>
-          <option value="2">2 (Binary)</option>
-          <option value="8">8 (Octal)</option>
-          <option value="10">10 (Decimal)</option>
-          <option value="16">16 (Hexadecimal)</option>
-        </select>
+          <div class="select-box">
+            <label for="toBase">To Base:</label>
+            <select id="toBase">
+              <option value="2" selected>Binary (Base 2)</option>
+              <option value="8">Octal (Base 8)</option>
+              <option value="10">Decimal (Base 10)</option>
+              <option value="16">Hexadecimal (Base 16)</option>
+            </select>
+          </div>
+        </div>
 
-        <br />
+        <div class="button-group">
+          <button onclick="convertBase()">Convert</button>
+          <button onclick="resetConverter()">Reset</button>
+        </div>
 
-        <label for="to-base" class="form-label">To Base</label>
-        <select name="to-base" id="to-base" class="form-select">
-          <option value="select">Select Base</option>
-          <option value="2">2 (Binary)</option>
-          <option value="8">8 (Octal)</option>
-          <option value="10">10 (Decimal)</option>
-          <option value="16">16 (Hexadecimal)</option>
-        </select>
-
-        <br />
-
-        <button type="submit" class="btn btn-success">Convert</button>
-        <button type="reset" class="btn btn-secondary">Reset</button>
-
-        <br /><br />
-
-        <label for="result" class="form-label">Result</label>
-        <input
-          type="text"
-          id="result"
-          name="result"
-          class="form-control"
-          disabled
-        />
-      </form>
+        <div class="result" id="result"></div>
+      </div>
     </div>
 
-    <!-- Main js file -->
     <script src="script.js"></script>
   </body>
 </html>
